--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <h1>Crie e compartilhe seu evento.</h1>
         <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
       </header>
-      <form>
+      <form id="my-form">
         <fieldset>
           <div class="fieldset-wrapper">
             <legend>Informações do evento</legend>
             <div class="input-wrapper">
-              <label for="event-tittle"
+              <label for="event-title"
                 >Titulo do evento <span>(mínimo de 8 caracteres)</span>
               </label>
-              <input type="text" id="event-title" />
+              <input type="text" id="event-title" required minlength="8" />
             </div>
             <div class="input-wrapper">
               <label for="event-link"
@@ -45,14 +45,70 @@
               <input type="text" id="event-whatsapp" />
             </div>
             <div class="input-wrapper">
-              <label for="event-whatsapp"
-                >Link do evento<span>(somente números)</span>
-              </label>
+              <label for="event-info">Informações extras </label>
               <textarea id="event-info"></textarea>
+            </div>
+            <div class="input-wrapper">
+              <label for="event-category">Categoria </label>
+              <select id="event-category">
+                <option value="live">Ao vivo</option>
+                <option value="podcast">Podcast</option>
+                <option value="Mentorship">Mentorship</option>
+              </select>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset>
+          <div class="fieldset-wrapper">
+            <legend>Privacidade</legend>
+            <div class="input-wrapper">
+              <label for="event-email"
+                >E-mail do administrador<span>(digite um e-mail válido)</span>
+              </label>
+              <input type="text" id="event-email" />
+            </div>
+            <div class="input-wrapper">
+              <label for="event-password"
+                >Senha de acesso para os participantes<span
+                  >(mínimo de 8 caracteres)</span
+                >
+              </label>
+              <input type="password" id="event-password" minlength="8" required/>
+            </div>
+            <div class="checkbox-wrapper">
+              <input type="checkbox" id="event-private" />
+              <label for="event-private">Evento privado</label>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset>
+          <div class="fieldset-wrapper">
+            <legend>Dia e hora</legend>
+            <div class="col-3">
+              <div class="input-wrapper">
+                <label for="event-date">Data </label>
+                <input type="date" id="event-date" />
+              </div>
+              <div class="input-wrapper">
+                <label for="event-begin">Das </label>
+                <input type="time" id="event-begin" />
+              </div>
+              <div class="input-wrapper">
+                <label for="event-end">Até </label>
+                <input type="time" id="event-end" />
+              </div>
             </div>
           </div>
         </fieldset>
       </form>
+      <footer>
+        <input
+          class="button"
+          type="submit"
+          form="my-form"
+          value="Salvar evento"
+        />
+      </footer>
     </div>
   </body>
 </html>
